--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,39 @@
 doctype html
 html
   head
-    title= title
+
+    title="Books N Giggles!"
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='shortcut icon' type='image/x-icon' href='./public/images/creepyBook.jpg')
+    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
+    link(rel="stylesheet", href="/stylesheets/style.css", )
+    script(src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
+    script(src="/javascripts/client.js")
+
   body
+    nav.navbar.navbar-default(id=nav)
+      div(id=homepage)
+
+      .container-fluid
+        .navbar-header
+          a.navbar-brand(href='#') Booky The Bookstore!
+            img(alt='Brand', src='../images/creepyBook.jpg' id='nav-bar-img')
+        ul.nav.navbar-nav.pagination.pagination-lg
+          li.active
+            a(href='/') Home
+          li
+            a(href='/books') Booklist
+          li
+            a(href='books/new') Add Book
+
+            form.navbar-form.navbar-right(action='/search', method='get')
+                    .form-group
+                      input.form-control(type='text', name="q" placeholder='Search by Title or Author')
+                    button.btn.btn-default(type='submit') Submit
+
+
+
+
+
     block content
