--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html
 
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='#') Booky The Bookstore!
+          a.navbar-brand(href='#') Books N' Giggles!
             img(alt='Brand', src='../images/creepyBook.jpg' id='nav-bar-img')
         ul.nav.navbar-nav.pagination.pagination-lg
           li.active
