made changes again

--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -1,4 +1,4 @@
-extends layout
+extends ../layout
 
 block content
   h2.h2.text-center Please add a new book
@@ -22,8 +22,8 @@ block content
     .form-group
       button.submit(type='submit') Add This Book
 
- //- extends ../layout
-//- 
+//- extends ../layout
+//-
  //- block content
   //-  .addBook
     //-  form(method='post', action=`/books${ book ? '' : '/' + book.id}`)
