Revert "made changes again"
This reverts commit 81b90478cc525a531425520d5fa8120c1d7fa231.

--- a/views/books/show.pug
+++ b/views/books/show.pug
@@ -1,6 +1,9 @@
+
 extends ../layout
 block content
   h1 BOOK
+  pre= JSON.stringify(book, null, 4)
 
-  each book in books
-    p= JSON.stringify(book)
+  h1= book.title
+
+  pre= book.description
