--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,7 +25,7 @@ html
           li
             a(href='/books') Booklist
           li
-            a(href='/books/new') Add Book
+            a(href='books/new') Add Book
 
             form.navbar-form.navbar-right(action='/search', method='get')
                     .form-group
