--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -1,4 +1,4 @@
-extends layout
+extends ../layout
 
 block content
   h2.h2.text-center Please add a new book
@@ -20,7 +20,7 @@ block content
       input.form-control(type='text', name='image', placeholder='Image URL')
 
     .form-group
-      button.submit(type='submit') Add This Book
+      button.btn.btn-success(type='submit') Add This Book
 
  //- extends ../layout
 //- 
