--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
           input.search-box(type='text', name='search'
           placeholder='Search..')
           button.submit(type='submit') Search
-        ul
+        ul.search-type
           li
             label
               input(type='input', value='title', name='type')
