--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,51 @@
+html {
+	background: url(http://www.gettyimages.com/gi-resources/images/frontdoor/creative/PanoramicImagesRM/FD_image.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: white;
+  background: transparent;
 }
 
 a {
   color: #00B7FF;
+}
+
+a.booklist {
+	background: url(https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSsoxIrWzUxiMMki17FN5EVqiMZDbjrNO_jB7AsK_XgwcyAscSV) no-repeat;
+	
+}
+
+a.add-book {
+	background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTp1-NNfLpNtsFQY25z7A4u9pp2D_vJHTNU70RDupydx4i7BrMKYw) no-repeat;
+}
+
+.pagination {
+	display: inline-block;
+	padding-left: 13px;
+	margin: 10px 0;
+	border-radius: 4px;
+}
+
+.search-type {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+.navbar-header
+a.navbar-brand {
+	color: #0e0101;
+	font-style: Arial;
+	font-size: 19px;
+}
+
+button {
+	margin: 2px;
 }
