--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,9 +23,9 @@ html
           li.active
             a(href='/') Home
           li
-            a(href='/books') Booklist
+            a.booklist(href='/books') Booklist
           li
-            a(href='/books/new') Add Book
+            a.add-book(href='/books/new') Add Book
 
             form.navbar-form.navbar-right(action='/search', method='get')
                     .form-group
